# haskell-tree-sitter

./: .ghc.environment.x86_64-darwin-8.6.4  .ghci  .gitignore  .gitmodules  .stylish-haskell.yaml  .travis.yml  BUILD.bazel  CHANGELOG.md  README.md  WORKSPACE  cabal.project  cabal.project.local~  haskell-tree-sitter.cabal  stack.yaml  tree-sitter.cabal
.github/workflows/: ci.yml
codegen/: codegen.cabal
codegen/src/: Main.hs
docs/: benchmarking_notes.md  codegen.md
examples/: Demo.hs  DemoEdit.hs  DemoReadTreeWithCursor.hs
includes/: tree_sitter_ptr.h  ts_cursor.h
languages/common/: stack.yaml  tree-sitter-common.cabal
languages/common/TreeSitter/: Language.hs
languages/go/: stack.yaml  tree-sitter-go.cabal
languages/go/internal/TreeSitter/Go/: Internal.hs
languages/haskell/: stack.yaml  tree-sitter-haskell.cabal
languages/haskell/TreeSitter/: Haskell.hs
languages/haskell/examples/: Demo.hs  DemoEdit.hs  DemoPtr.hs  DemoReadTreeWithCursor.hs
languages/haskell/internal/TreeSitter/Haskell/: Internal.hs
languages/haskell/test/: Spec.hs
languages/java/: tree-sitter-java.cabal
languages/json/: tree-sitter-json.cabal
languages/json/TreeSitter/: JSON.hs
languages/json/internal/TreeSitter/JSON/: Internal.hs
languages/nix/: tree-sitter-nix.cabal
languages/php/: tree-sitter-php.cabal
languages/php/TreeSitter/: PHP.hs
languages/php/internal/TreeSitter/PHP/: Internal.hs
languages/python/: tree-sitter-python.cabal
languages/python/TreeSitter/: CodeGen.hs  Python.hs
languages/python/TreeSitter/Python/: AST.hs
languages/python/app/: Main.hs
languages/python/internal/TreeSitter/Python/: Internal.hs
languages/ruby/: tree-sitter-ruby.cabal
languages/ruby/TreeSitter/: Ruby.hs
languages/tsx/: tree-sitter-tsx.cabal
languages/tsx/TreeSitter/: TSX.hs
languages/typescript/: tree-sitter-typescript.cabal
loc/: .gitignore  .stylish-haskell.yaml  .travis.yml  README.md  stack-lts-11.yaml  stack-lts-12.yaml  stack-lts-9.yaml  stack-nightly.yaml  stack.yaml
loc/loc/: README.md  loc-test-src  loc.cabal  stack.yaml
loc/loc-test/: license.txt  loc-test.cabal
script/: bootstrap  build-and-upload  build_and_upload  cibuild  profile  publish-all-packages  update-languages  upload
src/: bridge.c  bridge_cursor.c  bridge_edit.c  bridge_ptr.c
src/CodeGen/: Deserialize.hs  GenerateSyntax.hs
src/TreeSitter/: Cursor.hs  Importing.hs  Language.hs  Node.hs  Parser.hs  Ptr.hsc  Struct.hs  Symbol.hs  Tree.hs  TsInputEdit.hs  TsPoint.hs
src/th-syntax/: Deserialize.hs  GenerateSyntax.hs
test/: Spec.hs  th-syntax-tests.hs
test-codegen/: test-codegen.hs
tree-sitter/: BUILD.bazel  ChangeLog.md  README.md  tree-sitter.cabal
tree-sitter-c/: ChangeLog.md  tree-sitter-c.cabal
tree-sitter-c-sharp/: ChangeLog.md  tree-sitter-c-sharp.cabal
tree-sitter-c-sharp/TreeSitter/: CSharp.hs
tree-sitter-c/TreeSitter/: C.hs
tree-sitter-go/: ChangeLog.md  tree-sitter-go.cabal
tree-sitter-go/TreeSitter/: Go.hs
tree-sitter-go/TreeSitter/Go/: AST.hs
tree-sitter-go/test/: Test.hs
tree-sitter-haskell/: ChangeLog.md  tree-sitter-haskell.cabal
tree-sitter-haskell/TreeSitter/: Haskell.hs
tree-sitter-haskell/examples/: Demo.hs  QueryDemo.hs
tree-sitter-java/: ChangeLog.md  tree-sitter-java.cabal
tree-sitter-java/TreeSitter/: Java.hs
tree-sitter-java/TreeSitter/Java/: AST.hs  Grammar.hs
tree-sitter-java/internal/TreeSitter/Java/: Internal.hs
tree-sitter-java/test/: Test.hs
tree-sitter-json/: ChangeLog.md  tree-sitter-json.cabal
tree-sitter-json/TreeSitter/: JSON.hs
tree-sitter-json/TreeSitter/JSON/: AST.hs
tree-sitter-json/app/: Main.hs
tree-sitter-json/internal/TreeSitter/JSON/AST/: Internal.hs
tree-sitter-nix/: tree-sitter-nix.cabal
tree-sitter-ocaml/: ChangeLog.md  tree-sitter-ocaml.cabal
tree-sitter-ocaml/TreeSitter/: OCaml.hs
tree-sitter-php/: ChangeLog.md  tree-sitter-php.cabal
tree-sitter-php/TreeSitter/: PHP.hs
tree-sitter-php/TreeSitter/PHP/: AST.hs
tree-sitter-php/test/: Test.hs
tree-sitter-python/: .ghci  BUILD.bazel  ChangeLog.md  tree-sitter-python.cabal
tree-sitter-python/TreeSitter/: Python.hs
tree-sitter-python/TreeSitter/Python/: AST.hs  NodeTypes.hs
tree-sitter-python/bench/: Bench.hs
tree-sitter-python/test/: Main.hs  Test.hs
tree-sitter-python/test/Manual/: Examples.hs
tree-sitter-ql/: ChangeLog.md  tree-sitter-ql.cabal
tree-sitter-ql/TreeSitter/: QL.hs
tree-sitter-r/: ChangeLog.md  tree-sitter-r.cabal
tree-sitter-r/TreeSitter/: R.hs
tree-sitter-ruby/: ChangeLog.md  tree-sitter-ruby.cabal
tree-sitter-ruby/TreeSitter/: Ruby.hs
tree-sitter-ruby/TreeSitter/Ruby/: AST.hs
tree-sitter-ruby/bench/: Main.hs  Parsing.hs
tree-sitter-ruby/internal/TreeSitter/Ruby/: Internal.hs
tree-sitter-ruby/test/: Test.hs
tree-sitter-rust/: ChangeLog.md  tree-sitter-rust.cabal
tree-sitter-rust/TreeSitter/: Rust.hs
tree-sitter-scala/: ChangeLog.md  tree-sitter-scala.cabal
tree-sitter-scala/TreeSitter/: Scala.hs
tree-sitter-test-helpers/: tree-sitter-test-helpers.cabal
tree-sitter-test-helpers/src/TreeSitter/Test/: Helpers.hs
tree-sitter-tsx/: ChangeLog.md  tree-sitter-tsx.cabal
tree-sitter-tsx/TreeSitter/: TSX.hs
tree-sitter-tsx/TreeSitter/TSX/: AST.hs
tree-sitter-tsx/internal/TreeSitter/TSX/: Internal.hs
tree-sitter-typescript/: ChangeLog.md  tree-sitter-typescript.cabal
tree-sitter-typescript/TreeSitter/: TypeScript.hs
tree-sitter-typescript/TreeSitter/TypeScript/: AST.hs
tree-sitter/src/: Main.hs  bridge.c
tree-sitter/src/CodeGen/: Deserialize.hs  GenerateSyntax.hs
tree-sitter/src/TreeSitter/: Cursor.hs  Deserialize.hs  GenerateSyntax.hs  Language.hs  Node.hs  Parser.hs  Ptr.hs  Query.hs  Range.hs  Span.hs  Strings.hs  Struct.hs  Symbol.hs  Token.hs  Tree.hs  Unmarshal.hs
tree-sitter/src/TreeSitter/Marshal/: JSON.hs
tree-sitter/src/TreeSitter/Unmarshal/: Examples.hs
tree-sitter/test/: Spec.hs  Test.hs
tree-sitter/test-codegen/: test-codegen.hs
tree-sitter/test/TreeSitter/: Example.hs
tree-sitter/test/TreeSitter/Strings/: Example.hs
(+20 files in other folders)
