cabal-version:       2.2
name:                haskell-tree-sitter
version:             0.1.0
synopsis:            haskell tree-sitter bindings
description:         Please see README.md
homepage:            http://github.com/tree-sitter/haskell-tree-sitter#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix, Josh Vera, Tim Clem, Rick Winfrey, Max Brunsfeld, Ayman Nadeem, Patrick Thomson
maintainer:          rob.rix@github.com
copyright:           2015 GitHub
category:            Web
build-type:          Custom

library
  hs-source-dirs:      src
  build-depends:       base                  >= 4.7 && < 5
                     , aeson                 >= 1.2 && < 2
                     , bytestring           ^>= 0.10.8
                     , directory            ^>= 1.3
                     , fused-effects         >= 0.3
                     , filepath             ^>= 1.4
                     , hedgehog             ^>= 0.6
                     , split                ^>= 0.2
                     , template-haskell      >= 2.12 && <3
                     , text                 ^>= 1.2
                     , unordered-containers ^>= 0.2
  default-language:    Haskell2010
  exposed-modules:     TreeSitter.Parser
                     , TreeSitter.Importing
                     , TreeSitter.Language
                     , TreeSitter.Node
                     , TreeSitter.Tree
                     , CodeGen.GenerateSyntax
                     , CodeGen.Deserialize
                     --, TreeSitter.Ptr
                     , TreeSitter.Cursor
  Include-dirs:        includes
                     , vendor/tree-sitter/lib/include
                     , vendor/tree-sitter/lib/src
                     , vendor/tree-sitter/lib/utf8proc
  Includes:            tree_sitter_ptr.h
  c-sources:           src/bridge.c
                     , src/bridge_ptr.c
                     , vendor/tree-sitter/lib/src/lib.c
  cc-options:          -std=c99 -Os
  ghc-options:         -Wall -fno-warn-name-shadowing -O -j

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-tree-sitter
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite codegen-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test-codegen
  main-is: test-codegen.hs
  build-depends: hedgehog
               , base >= 4.7 && < 5
               , haskell-tree-sitter

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter

custom-setup
  setup-depends:  base >= 4.8 && < 5
                , Cabal
                , directory
                , process
