cabal-version:       2.2
name:                tree-sitter
version:             0.1.0.0
synopsis:            Unstable bindings for the tree-sitter parsing library.
description:         Tree-sitter is a parser generator tool and an incremental parsing library.
                     .
                     We strongly recommend against depending on this library at this time;
                     the data types and API are subject to rapid change. Future versions
                     will provide more reliable parsers and a more stable API.
homepage:            http://github.com/tree-sitter/haskell-tree-sitter#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix, Josh Vera, Tim Clem, Rick Winfrey, Max Brunsfeld, Ayman Nadeem, Patrick Thomson
maintainer:          rob.rix@github.com
copyright:           2015 GitHub
category:            Parsing, Tree-sitter
build-type:          Simple
tested-with:         GHC == 8.6.4

library
  hs-source-dirs:      src
  build-depends:       base                  >= 4.12 && < 5
                     , aeson                ^>= 1.4.2
                     , bytestring           ^>= 0.10.8.2
                     , directory            ^>= 1.3
                     , filepath             ^>= 1.4.1
                     , fused-effects         >= 0.4 && <1
                     , hedgehog              >= 0.6 && <2
                     , split                ^>= 0.2.3
                     , template-haskell      >= 2.12.0.0 && < 2.15.0.0
                     , text                 ^>= 1.2.3.1
                     , unordered-containers ^>= 0.2.9
  default-language:    Haskell2010
  exposed-modules:     TreeSitter.Parser
                     , TreeSitter.Importing
                     , TreeSitter.Language
                     , TreeSitter.Node
                     , TreeSitter.Tree
                     , CodeGen.GenerateSyntax
                     , CodeGen.Deserialize
                     , TreeSitter.Cursor
  include-dirs:        vendor/tree-sitter/lib/include
                     , vendor/tree-sitter/lib/src
                     , vendor/tree-sitter/lib/utf8proc
  install-includes:    tree_sitter/api.h
                     , tree_sitter/parser.h
                     , utf8proc.h
  c-sources:           src/bridge.c
                     , vendor/tree-sitter/lib/src/lib.c
                     , vendor/tree-sitter/lib/src/get_changed_ranges.c
                     , vendor/tree-sitter/lib/src/language.c
                     , vendor/tree-sitter/lib/src/lexer.c
                     , vendor/tree-sitter/lib/src/node.c
                     , vendor/tree-sitter/lib/src/parser.c
                     , vendor/tree-sitter/lib/src/stack.c
                     , vendor/tree-sitter/lib/src/subtree.c
                     , vendor/tree-sitter/lib/src/tree_cursor.c
                     , vendor/tree-sitter/lib/src/tree.c
                     , vendor/tree-sitter/lib/src/utf16.c
                     , vendor/tree-sitter/lib/utf8proc.c
                     , vendor/tree-sitter/lib/utf8proc_data.c
  cc-options:          -std=c99
  ghc-options:         -Wall -fno-warn-name-shadowing

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tree-sitter
                     , hspec ^>= 2.6.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite codegen-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test-codegen
  main-is:          test-codegen.hs
  default-language: Haskell2010
  build-depends:    base
                  , tree-sitter
                  , hedgehog >= 0.6 && <2

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
