name:                codegen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/codegen#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable codegen
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , haskell-tree-sitter
                     , template-haskell
                     , tree-sitter-python
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
