cabal-version:       2.2
name:                codegen
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/codegen#readme
license:             BSD-3-Clause
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple

executable codegen
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base
                     , haskell-tree-sitter
                     , template-haskell
                     , tree-sitter-python
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
