cabal-version:       2.4
name:                tree-sitter-c-sharp
version:             0.1.0.1
synopsis:            Tree-sitter grammar/parser for C#
description:         This package provides a parser for C# suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-c-sharp
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson, Damien Guard
maintainer:          damieng@gmail.com
copyright:           2020 GitHub
category:            Tree-sitter, CSharp, C#
build-type:          Simple
data-files:          vendor/tree-sitter-c-sharp/src/node-types.json
                   , vendor/tree-sitter-c-sharp/corpus/*.txt
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

library
  import: common
  exposed-modules:     TreeSitter.CSharp
  autogen-modules:     Paths_tree_sitter_c_sharp
  other-modules:       Paths_tree_sitter_c_sharp
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter ^>= 0.9.0.0
  Include-dirs:        vendor/tree-sitter-c-sharp/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-c-sharp/src/parser.c
  extra-libraries:     stdc++
  cc-options:          -Wno-trigraphs

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
