cabal-version:       2.2
name:                tree-sitter-go
version:             0.2.0.1
synopsis:            Tree-sitter grammar/parser for Go
description:         This package provides a parser for Go suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-go#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Tree-sitter, Go
build-type:          Simple

library
  exposed-modules:     TreeSitter.Go
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       >= 0.3 && < 1
                     , template-haskell  >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-go-internal
  default-language:    Haskell2010

library tree-sitter-go-internal
  exposed-modules:     TreeSitter.Go.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  include-dirs:        vendor/tree-sitter-go/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-go/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
