cabal-version:       2.4
name:                tree-sitter-go
version:             0.5.0.3
synopsis:            Tree-sitter grammar/parser for Go
description:         This package provides a parser for Go suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-go
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2019 GitHub
category:            Tree-sitter, Go
build-type:          Simple
data-files:          vendor/tree-sitter-go/src/node-types.json
                   , vendor/tree-sitter-go/corpus/*.txt
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

library
  import: common
  exposed-modules:     TreeSitter.Go
  autogen-modules:     Paths_tree_sitter_go
  other-modules:       Paths_tree_sitter_go
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter
  include-dirs:        vendor/tree-sitter-go/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-go/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
