cabal-version:       2.2
name:                tree-sitter-haskell
version:             0.2.0.1
synopsis:            Tree-sitter grammar/parser for Haskell (with GHC extensions)
description:         This package provides a parser for Haskell suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-haskell#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Tree-sitter, Haskell
build-type:          Simple

flag build-examples
  description: Build tree-sitter-haskell examples.
  default:     False

executable demo
  main-is: Demo.hs
  if !flag(build-examples)
    buildable: False
  hs-source-dirs:
      examples
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , tree-sitter
    , tree-sitter-haskell
  default-language: Haskell2010

library
  exposed-modules:     TreeSitter.Haskell
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       >= 0.3 && < 1
                     , template-haskell  >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-haskell-internal
  default-language:    Haskell2010

library tree-sitter-haskell-internal
  exposed-modules:     TreeSitter.Haskell.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-haskell/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-haskell/src/parser.c
                     , vendor/tree-sitter-haskell/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-haskell
