cabal-version:       2.2
name:                tree-sitter-haskell
version:             0.3.0.2
synopsis:            Tree-sitter grammar/parser for Haskell (with GHC extensions)
description:         This package provides a parser for Haskell suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-haskell
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2019 GitHub
category:            Tree-sitter, Haskell
build-type:          Simple
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

flag build-examples
  description: Build tree-sitter-haskell examples.
  default:     False

executable demo
  import: common
  main-is: Demo.hs
  if !flag(build-examples)
    buildable: False
  hs-source-dirs: examples
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , tree-sitter
    , tree-sitter-haskell

library
  import: common
  exposed-modules:     TreeSitter.Haskell
  autogen-modules:     Paths_tree_sitter_haskell
  other-modules:       Paths_tree_sitter_haskell
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-haskell/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-haskell/src/parser.c
                     , vendor/tree-sitter-haskell/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
