cabal-version:       2.2
name:                tree-sitter-java
version:             0.2.0.0
synopsis:            Tree-sitter grammar/parser for Java
description:         This package provides a parser for Java suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-go#readme
author:              Ayman Nadeem, Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Tree-sitter, Java
build-type:          Simple

library
  exposed-modules:     TreeSitter.Java
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       == 0.3.0.0
                     , template-haskell
                     , tree-sitter-java-internal
  default-language:    Haskell2010

library tree-sitter-java-internal
  exposed-modules:     TreeSitter.Java.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-java/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-java/src/parser.c
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
