cabal-version:       2.2
name:                tree-sitter-java
version:             0.7.0.3
synopsis:            Tree-sitter grammar/parser for Java
description:         This package provides a parser for Java suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-java
author:              Ayman Nadeem, Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey
maintainer:          tclem@github.com
copyright:           2019 GitHub
category:            Tree-sitter, Java
build-type:          Simple
data-files:          vendor/tree-sitter-java/src/node-types.json
                   , vendor/tree-sitter-java/corpus/*.txt
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

library
  import: common
  exposed-modules:     TreeSitter.Java
  autogen-modules:     Paths_tree_sitter_java
  other-modules:       Paths_tree_sitter_java
  build-depends:       base >= 4.12 && < 5
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-java/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-java/src/parser.c
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
