cabal-version:       2.2
name:                tree-sitter-json
version:             0.2.0.0
synopsis:            Tree-sitter grammar/parser for JSON
description:         This package provides a parser for JSON suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/tree-sitter-json#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Tree-sitter, JSON
build-type:          Simple

library
  exposed-modules:     TreeSitter.JSON
  build-depends:       base              >= 4.12 && < 5
                     , tree-sitter       == 0.3.0.0
                     , template-haskell  >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-json-internal
  default-language:    Haskell2010

library tree-sitter-json-internal
  exposed-modules:     TreeSitter.JSON.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  include-dirs:        vendor/tree-sitter-json/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-json/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
