cabal-version:       2.2
name:                tree-sitter-json
version:             0.5.0.0
synopsis:            Tree-sitter grammar/parser for JSON
description:         This package provides a parser for JSON suitable for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-json
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Tree-sitter, JSON
build-type:          Simple
data-files:          vendor/tree-sitter-json/src/node-types.json
extra-source-files:  ChangeLog.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  exposed-modules:
    TreeSitter.JSON
    TreeSitter.JSON.AST
  build-depends:       base              >= 4.12 && < 5
                     , template-haskell  >= 2.12 && < 2.16
                     , text             ^>= 1.2.3.1
                     , tree-sitter      ^>= 0.7
                     , tree-sitter-json-internal

library tree-sitter-json-internal
  import: common
  exposed-modules:     TreeSitter.JSON.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  include-dirs:        vendor/tree-sitter-json/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-json/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
