name:                tree-sitter-nix
version:             0.2.0.1
synopsis:            tree-sitter Nix language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/haskell-tree-sitter#readme
author:              Robert Hensing
-- maintainer:
copyright:           Hercules Labs OÜ
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Nix
  build-depends:       base              >= 4.7 && < 5
                     , tree-sitter       >= 0.3 && < 1
                     , template-haskell
                     , tree-sitter-nix-internal
  default-language:    Haskell2010

library tree-sitter-nix-internal
  exposed-modules:     TreeSitter.Nix.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-nix/src
  c-sources:           vendor/tree-sitter-nix/src/parser.c
                       vendor/tree-sitter-nix/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
