cabal-version:       2.2
name:                tree-sitter-nix
version:             0.2.0.1
synopsis:            tree-sitter Nix language bindings
description:         A parser for Nix for use with the tree-sitter package.
license:             BSD-3-Clause
homepage:            https://github.com/tree-sitter/haskell-tree-sitter/tree/master/tree-sitter-nix
author:              Robert Hensing
maintainer:          Robert Hensing
copyright:           Hercules Labs OÜ
category:            Web
build-type:          Simple
-- extra-source-files:

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

library
  import: common
  exposed-modules:     TreeSitter.Nix
  build-depends:
    , base              >= 4.7 && < 5
    , tree-sitter       >= 0.3 && < 1
    , template-haskell  >= 2.12 && < 2.17
    , tree-sitter-nix-internal

library tree-sitter-nix-internal
  import: common
  exposed-modules:     TreeSitter.Nix.Internal
  hs-source-dirs:      internal
  build-depends:       base
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-nix/src
  c-sources:           vendor/tree-sitter-nix/src/parser.c
                       vendor/tree-sitter-nix/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/haskell-tree-sitter
